# Any2RSI

./: .env.example  .gitattributes  .gitignore  .gitmodules  LICENSE  README.md  environment.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml
configs/: any2rsi_rsicd.yaml  weights.json
data/: README.md
docs/: ARCHITECTURE.md  CITATION.bib  DATASET.md  IMPLEMENTATION_DETAILS.md  IMPLEMENTATION_STATUS.md  INSTALL.md  RELEASE_CHECKLIST.md  TRAINING_VALIDATION.md  XRST2I_VALIDATION.md
requirements/: README.md  annotators.txt  base.txt  dev.txt  edg.txt  eval.txt
scripts/: check_release.py  check_setup.py  download_hf_resolved.py  download_weights.py  edg_generate.py  evaluate.py  export_trainable.py  generate.py  generate_batch.py  make_smoke_data.py  prepare_controls.py  prepare_xrst2i.py  prepare_xrst2i_subset.py  setup_anycontrol.sh  smoke_train.py
src/data/: controls.py  rst2i_dataset.py
src/models/: any2rsi_cldm.py  cmmca.py  vision_encoder.py
src/train/: train.py
src/utils/: __init__.py  paths.py
tests/: test_cmmca.py  test_dataset.py
weights/: README.md
